--- a/_sass/components/_buttons.scss
+++ b/_sass/components/_buttons.scss
@@ -2,7 +2,7 @@
   Components > Buttons
 \*------------------------------------*/
 
-$btn-bg:       #207cdf;
+$btn-bg:       #000000;
 $btn-bg-hover: #238cf6;
 
 .c-btn {
