--- a/_sass/components/_buttons.scss
+++ b/_sass/components/_buttons.scss
@@ -3,7 +3,7 @@
 \*------------------------------------*/
 
 $btn-bg:       #000000;
-$btn-bg-hover: #238cf6;
+$btn-bg-hover: #000000;
 
 .c-btn {
   display: inline-block;
