--- a/_sass/minimal-mistakes/_variables.scss
+++ b/_sass/minimal-mistakes/_variables.scss
@@ -47,7 +47,7 @@ $type-size-8: 0.625em !default; // ~10px
    Colors
    ========================================================================== */
 
-$gray: #7a8288 !default;
+$gray: #808080 !default;
 $dark-gray: mix(#000, $gray, 40%) !default;
 $darker-gray: mix(#000, $gray, 60%) !default;
 $light-gray: mix(#fff, $gray, 50%) !default;
@@ -111,13 +111,13 @@ $masthead-link-color-hover: mix(#000, $primary-color, 25%) !default;
 $navicon-link-color-hover: mix(#fff, $primary-color, 75%) !default;
 
 /* syntax highlighting (base16) */
-$base00: #263238 !default;
-$base01: #2e3c43 !default;
-$base02: #314549 !default;
-$base03: #546e7a !default;
-$base04: #b2ccd6 !default;
-$base05: #eeffff !default;
-$base06: #eeffff !default;
+$base00: #2a2a2a !default;
+$base01: #3d3d3d !default;
+$base02: #4b4b4b !default;
+$base03: #7c7c7c !default;
+$base04: #cecece !default;
+$base05: #eeeeff !default;
+$base06: #eef1ff !default;
 $base07: #ffffff !default;
 $base08: #f07178 !default;
 $base09: #f78c6c !default;
