--- a/_sass/minimal-mistakes/skins/_dark.scss
+++ b/_sass/minimal-mistakes/skins/_dark.scss
@@ -5,7 +5,7 @@
 /* Colors */
 $background-color: #313131 !default;
 $text-color: #eaeaea !default;
-$primary-color: #48a9e2 !default;
+$primary-color: #4782ee !default;
 $border-color: mix(#fff, $background-color, 20%) !default;
 $code-background-color: mix(#000, $background-color, 15%) !default;
 $code-background-color-dark: mix(#000, $background-color, 20%) !default;
